feat(auth): implement local authentication and multi-role
